fixed up spacing

--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  padding: 4rem 0rem 7rem 0rem;
+  padding: 4rem 0rem 2.5rem 0rem;
   display: flex;
   flex-direction: column;
 
